메인화면 첫 구상

--- a/src/assets/scss/section/_header.scss
+++ b/src/assets/scss/section/_header.scss
@@ -124,3 +124,13 @@
         transform: rotate(0) scale(1);
     }
 }
+
+#timedate {
+  font: small-caps lighter 43px/150% "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
+  text-align:left;
+  width: 20%;
+  padding: 1rem;
+  margin: 0.5rem 0.2rem;
+  color:#fff;
+  border-left: 3px solid #ed1f24;
+}
